# ptrace-tests

./: .cvsignore  Makefile.am  PTRACE  README  STATUS.tests  bootstrap.sh  configure.ac  test-template.c
CVS/: Entries  Repository
biarch-tests/: .cvsignore  Makefile.am  configure.ac
biarch-tests/CVS/: Entries  Repository
config/CVS/: Entries  Repository
tests/: Makefile.am  attach-into-signal.c  attach-sigcont-wait-3x.c  attach-sigcont-wait.c  attach-wait-on-stopped.c  block-step.c  bogus-echild.c  clone-get-signal.c  clone-multi-ptrace.c  clone-ptrace.c  configure.ac  detach-can-signal.c  detach-parting-signal.c  detach-sigkill-race.c  detach-stopped-rhel5.c  detach-stopped.c  eintr-on-attach.c  erestartsys-debuggee.c  erestartsys-debugger.c  erestartsys-trap-32fails-debuggee.c  erestartsys-trap-32fails-debugger.c  erestartsys-trap-debuggee.c  erestartsys-trap-debugger.c  erestartsys-trap.c  erestartsys.c  event-exit-proc-environ.c  event-exit-proc-maps.c  fpregs-smp.c  highmem-debuggee.c  highmem-debugger.c  late-ptrace-may-attach-check.c  o_tracevfork-parent.c  o_tracevfork.c  o_tracevforkdone.c  peekpokeusr.c  pid-namespace.c  powerpc-altivec.c  ppc-dabr-race.c  ppc-ptrace-exec-full-regs.c  ptrace-cont-sigstop-detach.c  (+38 more)
tests/CVS/: Entries  Repository  Root
